--- a/index.html
+++ b/index.html
@@ -36,29 +36,22 @@
           Este site foi desenvolvido pelos alunos do 1º ano do curso Ensino Médio integrado ao Técnico em <i>Informática
             para Internet</i>, de modo a proporcionar ao público uma "exposição virtual" dos Projetos e Jogos
           desenvolvidos no decorrer do ano com todas as turmas (1º, 2º e 3º Informática).</p>
-        <p>Vem com a gente e divirta-se!</p>
+        <br>
+        <p><i>Aos expositores e visitantes, sejam bem-vindos!</i></p>
       </div>
     </section>
 
     <section id="curso" class="section-curso">
-      <div class="video-frame">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_9JEB2ydyT8?si=__zxUHCLFoVaP3br"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-        </iframe>
-      </div>
       <div class="container">
-        <h2>Informática para Internet</h2>
-        <p>Neste curso além da conclusão do ensino médio com alta qualidade você terá inúmeras oportunidades em sua
-          carreira profissional. A área computacional é um mercado extremamente promissor e de alta taxa de
-          empregabilidade. Além do conhecimento em programação e desenvolvimento Web, aplicativos e robótica, o curso
-          promove habilidades e competências que são essenciais para qualquer profissional na sociedade atual.</p>
-        <p>Se você gosta de tecnologia e gostaria de se aventurar nessa área incrível de desenvolvimento web, vem com a
-          gente!</p>
+        <h1>Curso</h1>
+        <p>O curso de Informática para Internet prepara o aluno para o desenvolvimento de websites, aplicativos
+          e-commerce e serviços relacionados, além de fornecer uma base sólida em tecnologias de programação, banco de
+          dados e desenvolvimento web.</p>
+      </div>
+      <div class="video-frame">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_9JEB2ydyT8?si=3jWWOurv59GDGACN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section>
-
 
     <section id="exposicoes" class="section-exposicoes">
       <h2>Exposições</h2><br>
@@ -76,7 +69,7 @@
           <a href="https://jucdreis.github.io/disney-musicas" target="_blank"><button>Saiba mais</button></a>
         </div>
         <div class="expo-item">
-          <img src="memoria.jpg" alt="Jogo da Memória">
+          <img src="./img/memocopas.png" alt="Jogo da Memória">
           <h3>Jogo da Memória</h3>
           <p>Um jogo da memória digital, divertido e educativo.</p>
           <a href="https://memocopas.vercel.app/" target="_blank"><button>Saiba mais</button></a>
@@ -101,45 +94,16 @@
         </div>
       </div>
     </section>
-
-
   </main>
 
-  <footer id="contato">
-    <p>Projetos desenvolvidos pelas Turmas 1º, 2º e 3º ano do Curso Informática para Internet<br><br></p>
-    <p>Etec Darcy Pereira de Moraes - Itapetininga / SP <br><a href="https://etecdpm.cps.sp.gov.br/"
-        target="_blank">https://etecdpm.cps.sp.gov.br/</a></p>
-
+  <footer>
+    <p>&copy; 2023 INFO<span class="titulo">TEC</span> - Todos os direitos reservados.</p>
     <div class="social-icons">
-      <a href="https://www.facebook.com/share/YdRHMqEwchk27Dbg/?mibextid=qi2Omg" target="_blank" aria-label="Facebook">
-        <i class="fab fa-facebook fa-2x"></i>
-      </a>
-      <a href="https://www.instagram.com/etecdarcypereira?igsh=MWdubDEwOGNnMWJpcw==" target="_blank"
-        aria-label="Instagram">
-        <i class="fab fa-instagram fa-2x"></i>
-      </a>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
     </div>
   </footer>
-
-  <script>
-    const themeToggle = document.getElementById('theme-toggle');
-    let isDarkMode = false;
-
-    themeToggle.addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
-      isDarkMode = !isDarkMode;
-      const icon = themeToggle.querySelector('i');
-      icon.classList.toggle('fa-sun');
-      icon.classList.toggle('fa-moon');
-    });
-
-    const menuToggle = document.getElementById('menu-toggle');
-    const navMenu = document.getElementById('nav-menu');
-
-    menuToggle.addEventListener('click', () => {
-      navMenu.querySelector('ul').classList.toggle('show');
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
